Fixed bug #33171 (foreach enumerates private fields declared in base classes)